--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -24,6 +24,7 @@
     -# svg include needs to be first thing in body tag
     = svg 'symbol-defs'
     -# responsive is disabled so use .col-xs-* everywhere for bs columns
+    = render 'layouts/impersonation'
     .wrapper--full-bleed__bg-03.pb5
       - if show_top_nav?
         = render 'layouts/top_nav'
