[#153747004] Cursor issue for iOS

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -24,7 +24,7 @@
     -# svg include needs to be first thing in body tag
     = svg 'symbol-defs'
     -# responsive is disabled so use .col-xs-* everywhere for bs columns
-    .wrapper--full-bleed__bg-03.pb5
+    .wrapper--full-bleed__bg-03.pb5.js-ios-hack
       - if show_top_nav?
         = render 'layouts/top_nav'
         -# .container.container--main
@@ -36,9 +36,10 @@
         = render 'ecommerce/checkout/nav'
         = render 'layouts/alerts'
       = yield
-    = yield :after_wrapper
+    .js-ios-hack
+      = yield :after_wrapper
 
-    %footer.footer
+    %footer.footer.js-ios-hack
       = render 'layouts/footer'
 
     = render 'pjax_modal_frame'
