--- a/app/views/admin/ecommerce/dashboard/index.haml
+++ b/app/views/admin/ecommerce/dashboard/index.haml
@@ -17,3 +17,5 @@
         %td= link_to 'Stats', admin_ecommerce_stats_path
       %tr
         %td= link_to 'Promo Codes', admin_ecommerce_promo_codes_path
+      %tr
+        %td= link_to 'Boxes', admin_ecommerce_parcels_path
