add meta description and change title

--- a/app/views/layouts/_social_tags.haml
+++ b/app/views/layouts/_social_tags.haml
@@ -5,3 +5,4 @@
 %meta{:content => asset_url('hero-image-v2-1536.png'), :property => "og:image"}/
 %meta{:name => 'og:width', :content => 1536}
 %meta{:name => 'og:height', :content => 1024}
+%meta{:content => "Need a gift whisperer to help you shop for her this holiday? Come to wrapt.com for handmade, artisanal gifts she will love.", :name => "Description"}/
