--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Wrapt
+    %title Give Better, Give Wrapt.
     -# TODO Hacky home page test so that email collector doesn't look horrible on mobile
       - if root_path
         %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
