--- a/app/views/gift_selections/_gift_basket.haml
+++ b/app/views/gift_selections/_gift_basket.haml
@@ -25,7 +25,7 @@
         in your cart
 
       - if checkout_enabled?
-        = link_to 'CHECK OUT', ecommerce_checkout_start_path(giftee_id: profile.id), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', id: 'js-checkout', method: :patch
+        = link_to 'CHECK OUT', ecommerce_checkout_start_path(giftee_id: profile.id), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', id: 'js-checkout', method: :patch, onClick: "ga('ec:setAction', 'checkout', {option: 'initiate checkout', step: 0})"
       - else
         = link_to 'CHECK OUT COMING SOON', 'javascript:void(0)', class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
 
