--- a/app/views/ecommerce/checkout/edit_gift_wrapt.haml
+++ b/app/views/ecommerce/checkout/edit_gift_wrapt.haml
@@ -16,4 +16,10 @@
     $(document).ready(function() {
       App.NoteBehavior('customer_order', 'gift_wrapt', 'true', true, '.j-co-gift-wrapt__note-1')
       App.NoteBehavior('customer_order', 'include_note', '0', false, '.j-co-gift-wrapt__note-2')
+      
+      //Google Analytics Enhanced Ecommerce
+      ga('ec:setAction', 'checkout', {
+        'option': 'Checkout 1: Note', 
+        'step': 1
+      });
     })
