--- a/app/views/ecommerce/checkout/edit_review.haml
+++ b/app/views/ecommerce/checkout/edit_review.haml
@@ -27,3 +27,17 @@
             = "Complete Purchase".html_safe
 
   = render "debug", customer_order: @customer_order
+
+= content_for :page_js do
+  :javascript
+    //Google Analytics Enhanced Ecommerce
+    $('document').ready(function() {
+      var actionData = {
+        'option': 'Checkout 5: Review Details',
+        'step': 5,
+        'tax': '#{@customer_order.taxes_in_dollars}',
+        'shipping': '#{@customer_order.combined_handling_in_dollars}',
+        'revenue': '#{@customer_order.total_to_charge_in_dollars}'
+      }
+      ga('ec:setAction', 'checkout', actionData);
+    })
