--- a/app/views/ecommerce/checkout/finalize.haml
+++ b/app/views/ecommerce/checkout/finalize.haml
@@ -33,3 +33,15 @@
                 %a.btn.btn-primary.btn-block.uppercase.mb6{href: my_account_order_path(@customer_order)} View Details
 
   = render "debug", customer_order: @customer_order
+= content_for :page_js do
+  :javascript
+    //Google Analytics Enhanced Ecommerce
+    $('document').ready(function() {
+      var actionData = {
+        'id': '#{@customer_order.id}',
+        'tax': '#{@customer_order.taxes_in_dollars}',
+        'shipping': '#{@customer_order.combined_handling_in_dollars}',
+        'revenue': '#{@customer_order.total_to_charge_in_dollars}'
+      }
+      ga('ec:setAction', 'purchase', actionData);
+    })
