--- a/app/views/ecommerce/checkout/edit_review.haml
+++ b/app/views/ecommerce/checkout/edit_review.haml
@@ -37,7 +37,9 @@
         'step': 5,
         'tax': '#{@customer_order.taxes_in_dollars}',
         'shipping': '#{@customer_order.combined_handling_in_dollars}',
-        'revenue': '#{@customer_order.total_to_charge_in_dollars}'
+        'revenue': '#{@customer_order.total_to_charge_in_dollars}',
+        'dimension1': '#{analytics_gifter_id || -1}',
+        'dimension4': '#{@customer_order.promo_code}'
       }
       ga('ec:setAction', 'checkout', actionData);
     })
