--- a/app/views/ecommerce/checkout/edit_payment.haml
+++ b/app/views/ecommerce/checkout/edit_payment.haml
@@ -31,7 +31,9 @@
         'step': 4,
         'tax': '#{@customer_order.taxes_in_dollars}',
         'shipping': '#{@customer_order.combined_handling_in_dollars}',
-        'revenue': '#{@customer_order.total_to_charge_in_dollars}'
+        'revenue': '#{@customer_order.total_to_charge_in_dollars}',
+        'dimension1': '#{analytics_gifter_id || -1}',
+        'dimension4': 'n/a'
       }
       ga('ec:setAction', 'checkout', actionData)
     })
