--- a/app/views/gift_selections/_index.haml
+++ b/app/views/gift_selections/_index.haml
@@ -21,5 +21,19 @@
         .gift-basket__price-count
           %span.gift-basket__gift-price.small
             = number_to_currency gift.selling_price
-      = link_to giftee_gift_selection_path(profile, gift_selection), data: {remote: true, behavior: 'remove-gift-from-basket', method: :delete}, class: 'gift-basket__remove-gift-link', onClick: "ga('send', 'event', 'basket', 'remove from basket', '#{gift.title}');" do
+      = link_to giftee_gift_selection_path(profile, gift_selection), data: {remote: true, behavior: 'remove-gift-from-basket', analytics: 'remove-gift-from-basket', gift: "#{gift.title}"}, method: :delete, class: 'gift-basket__remove-gift-link' do
         =embedded_svg('icon-close', class: 'remove-gift-link__icon-close')
+
+= content_for :page_js do
+  :javascript
+    $(document).ready(function() {
+      $('body').on('click', '[data-analytics="remove-gift-from-basket"]', function() {
+        var gift = $(this).data('gift');
+        ga('send', 'event', 'basket', 'remove from basket', gift);
+        ga('ec:setAction', 'remove', {
+          'dimension1': '#{@profile.try(:id) || -1}', 
+          'dimension4': 'n/a'
+        });
+      });
+    })
+    
