--- a/app/views/layouts/_google_analytics.erb
+++ b/app/views/layouts/_google_analytics.erb
@@ -1,5 +1,4 @@
-<%# if Rails.env.production? %>
-<% if true %>
+<% if Rails.env.production? %>
   <script>
   window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
   ga('create', 'UA-91764940-1', 'auto');
