fix rec counts on giftee page

--- a/app/views/my_account/giftees/_giftee.haml
+++ b/app/views/my_account/giftees/_giftee.haml
@@ -15,7 +15,7 @@
         .tab-pane.fade{class: (tab[:active] ? 'in active' : ''), id: tab[:tab_pane_id]}
           = render tab[:tab_pane_partial], giftee: giftee
     - if giftee.finished_surveys?
-      - num_recommendations = GiftRecommendation.select_for_display(giftee.gift_recommendations)&.size || 0
+      - num_recommendations = GiftRecommendation.load_recommendations_for_display(giftee.gift_recommendations)&.size || 0
       - if num_recommendations > 0
         = link_to giftee_gift_recommendations_path(giftee), class: 'btn btn-primary btn-block ma-giftee-card__btn' do
           VIEW #{num_recommendations} RECOMMENDATIONS
