[#154179965] remove stale gitees from my giftee pages

--- a/app/assets/stylesheets/modules/_my_account.scss
+++ b/app/assets/stylesheets/modules/_my_account.scss
@@ -183,12 +183,13 @@
   @include akkurat-regular;
   line-height: 1.5;
   padding: 16px;
-  small {
-    display: block;
-    font-size: 14px;
-    color: $gray-006;
-    @include akkurat-light;
-  }
+  padding-right: 0px;
+}
+
+.ma-giftee__sub-name small {
+  font-size: 14px;
+  color: $gray-006;
+  @include akkurat-light;
 }
 
 .ma-giftee-card__action {
