[#154179965] update giftees with gift sent

--- a/app/views/my_account/giftees/_giftee_orders.haml
+++ b/app/views/my_account/giftees/_giftee_orders.haml
@@ -2,6 +2,6 @@
   %small.pull-right
     - sent_gift_size = giftee.customer_orders.size
     - if sent_gift_size > 1
-      = link_to "See #{sent_gift_size} gifts sent", my_account_orders_path
+      = link_to "See #{sent_gift_size} gifts sent", my_account_orders_path(search: {profile_id: giftee.id})
     - else
       = link_to "See #{sent_gift_size} gift sent", my_account_order_path(giftee.customer_orders.first)
