[#154092849] add start quiz to my giftees page

--- a/app/assets/stylesheets/modules/_my_account.scss
+++ b/app/assets/stylesheets/modules/_my_account.scss
@@ -137,6 +137,10 @@
   }
 }
 
+.ma-giftees__container {
+  border-bottom: 1px solid $gray-005;
+}
+
 .ma-giftees {
   @include flexbox();
   @include flexwrap();
