--- a/app/views/static_pages/_start_quiz.haml
+++ b/app/views/static_pages/_start_quiz.haml
@@ -8,16 +8,6 @@
         .row
           .col-xs-12.col-sm-10.col-sm-offset-1
             .sg-question
-              - if require_invites? && current_user.blank?
-                = render "shared/invitation_request"
-              - else
-                - url = giftees_path
-                = simple_form_for @question_response, url: url, html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
-                  - if current_user&.admin?
-                    = hidden_field_tag :survey_id, @survey.id
-                  = render response_fields_partial, form: form, label: @question_response.survey_question.prompt
-                  .sqr-submit__container.text-right#js-sqr-submit__container
-                    %button{type: "submit", class: 'btn btn-primary sqr-submit__btn', data: {behavior: 'next-question-button'}}
-                      Next
+              = render 'shared/start_quiz'
         .text-center
           = embedded_svg('icon-gift-better-gift-wrapt', class: "landing-bottom__icon-gift-better-gift-wrapt mt6")
